--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <a href="#Contacto">Contacto</a>
       </section>
     <header id="Inicio">
-      <h1>Nicolás Zarantonello</h1>
+      <h1 class="name">Nicolás Zarantonello</h1>
       <p>Full Stack Developer</p>
     </header>
     <section id="SobreMi" class="sobremi">
@@ -36,6 +36,8 @@
         Me gusta explorar nuevos proyectos y descubrir cosas nuevas.
         Soy responsable y perseverante, siempre dispuesto al trabajo en equipo para lograr los objetivo.
         </p>
+        <br>
+        <a href="CV_nicoz.pdf" download="Cv NicoZ" target="_blank"><button class="cv">Descargar CV</button></a>
     </section>
     <section id="Proyectos" class="proyectos">
       <h4>Proyectos en los que he estado trabajando:</h4>
