--- a/index.html
+++ b/index.html
@@ -42,17 +42,48 @@
     <section id="Proyectos" class="proyectos">
       <h4>Proyectos en los que he estado trabajando:</h4>
       <br>
+      <ul>        
         <li>Proyecto 1</li>
         <li>Proyecto 2</li>
         <li>Proyecto 3</li>
+      </ul>
     </section>
-    <section id="Tecnologias" class="tecnologias">
+  <section id="Tecnologias" class="tecnologias">
        <h4>Tecnologias que manejo hasta el momento:</h4>
        <br>
-       <li>Html</li>
-       <li>Css</li>
-       <li>Javascript</li>
-    </section>
+    <div class="galeria">
+      <div class="foto">
+        <img src="html-5.png" alt="Html5">
+      </div>
+      <div class="pie">
+        <p>Html</p>
+      </div>
+    </div>
+    <div class="galeria">
+      <div class="foto">
+        <img src="css-3.png" alt="Css3">
+      </div>
+      <div class="pie">
+        <p>Css</p>
+      </div>
+    </div>
+    <div class="galeria">
+      <div class="foto">
+        <img src="secuencia-de-comandos-de-java.png" alt="Javascript">
+      </div>
+      <div class="pie">
+        <p>Javascript</p>
+      </div>
+    </div>
+    <div class="galeria">
+      <div class="foto">
+        <img src="logotipo-de-python-language.png" alt="Python">
+      </div>
+      <div class="pie">
+        <p>Python</p>
+      </div>
+    </div>
+  </section>
     <section class="botones" id="Contacto">
         <a href="https://github.com/NicoZdev" target="_blank" class="fa fa-github"></a>
         <a href="https://www.instagram.com/nicozarantonello/" target="_blank" class="fa fa-instagram"></a>
@@ -60,6 +91,8 @@
         <a href="https://www.youtube.com/channel/UCK1LZfeb-r9EfwdOmerPL5g" target="_blank" class="fa fa-youtube"></a>
         <a href="https://www.linkedin.com/in/nicolás-zarantonello-348579264/" target="_blank" class="fa fa-linkedin"></a>
       </section>
+      <br>
+      <p class="copyright">Copyright © Todos los derechos reservados Nicolás Zarantonello</p>
 </body>
 <script src="script.js"></script>
 </html>
