--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
 <link href="https://fonts.googleapis.com/css2?family=Righteous&display=swap" rel="stylesheet">
 </head>
 <body>
+  <div id="contcarga">
+    <div id="carga"></div>
+  </div>
     <section>
       <nav class="navegar">
         <img src="Logo ZN.jpg" alt="Logo" width="3%">
@@ -42,11 +45,38 @@
     <section id="Proyectos" class="proyectos">
       <h4>Proyectos en los que he estado trabajando:</h4>
       <br>
-      <ul>        
-        <li>Proyecto 1</li>
-        <li>Proyecto 2</li>
-        <li>Proyecto 3</li>
-      </ul>
+      <div class="contenedor">
+        <div class="tarjetas">
+          <figure>
+            <img src="FondoProyect.jpg" alt="Proyecto1">
+            <div class="contenido">
+              <h3>Proyecto 1</h3>
+              <p> Descripcion del proyecto 1 -----------------------------------------------------------------------</p>
+              <a href="#pagina-del-proyecto">Ver proyecto</a>
+            </div>
+          </figure>
+        </div>
+        <div class="tarjetas">
+          <figure>
+            <img src="FondoProyect.jpg" alt="Proyecto2">
+            <div class="contenido">
+              <h3>Proyecto 2</h3>
+              <p> Descripcion del proyecto 2 -----------------------------------------------------------------------</p>
+              <a href="#pagina-del-proyecto">Ver proyecto</a>
+            </div>
+          </figure>
+        </div>
+        <div class="tarjetas">
+          <figure>
+            <img src="FondoProyect.jpg" alt="Proyecto3">
+            <div class="contenido">
+              <h3>Proyecto 3</h3>
+              <p> Descripcion del proyecto 3 -----------------------------------------------------------------------</p>
+              <a href="#pagina-del-proyecto">Ver proyecto</a>
+            </div>
+          </figure>
+        </div>
+      </div>
     </section>
   <section id="Tecnologias" class="tecnologias">
        <h4>Tecnologias que manejo hasta el momento:</h4>
