--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
 <link href="https://fonts.googleapis.com/css2?family=Righteous&display=swap" rel="stylesheet">
 </head>
 <body>
+  <div id="contcarga">
+    <div id="carga"></div>
+  </div>
     <section>
       <nav class="navegar">
         <img src="Logo ZN.jpg" alt="Logo" width="3%">
@@ -25,7 +28,7 @@
         <a href="#Contacto">Contacto</a>
       </section>
     <header id="Inicio">
-      <h1>Nicolás Zarantonello</h1>
+      <h1 class="name">Nicolás Zarantonello</h1>
       <p>Full Stack Developer</p>
     </header>
     <section id="SobreMi" class="sobremi">
@@ -36,21 +39,81 @@
         Me gusta explorar nuevos proyectos y descubrir cosas nuevas.
         Soy responsable y perseverante, siempre dispuesto al trabajo en equipo para lograr los objetivo.
         </p>
+        <br>
+        <a href="CV_nicoz.pdf" download="Cv NicoZ" target="_blank"><button class="cv">Descargar CV</button></a>
     </section>
     <section id="Proyectos" class="proyectos">
       <h4>Proyectos en los que he estado trabajando:</h4>
       <br>
-        <li>Proyecto 1</li>
-        <li>Proyecto 2</li>
-        <li>Proyecto 3</li>
+      <div class="contenedor">
+        <div class="tarjetas">
+          <figure>
+            <img src="FondoProyect.jpg" alt="Proyecto1">
+            <div class="contenido">
+              <h3>Proyecto 1</h3>
+              <p> Descripcion del proyecto 1 -----------------------------------------------------------------------</p>
+              <a href="#pagina-del-proyecto">Ver proyecto</a>
+            </div>
+          </figure>
+        </div>
+        <div class="tarjetas">
+          <figure>
+            <img src="FondoProyect.jpg" alt="Proyecto2">
+            <div class="contenido">
+              <h3>Proyecto 2</h3>
+              <p> Descripcion del proyecto 2 -----------------------------------------------------------------------</p>
+              <a href="#pagina-del-proyecto">Ver proyecto</a>
+            </div>
+          </figure>
+        </div>
+        <div class="tarjetas">
+          <figure>
+            <img src="FondoProyect.jpg" alt="Proyecto3">
+            <div class="contenido">
+              <h3>Proyecto 3</h3>
+              <p> Descripcion del proyecto 3 -----------------------------------------------------------------------</p>
+              <a href="#pagina-del-proyecto">Ver proyecto</a>
+            </div>
+          </figure>
+        </div>
+      </div>
     </section>
-    <section id="Tecnologias" class="tecnologias">
+  <section id="Tecnologias" class="tecnologias">
        <h4>Tecnologias que manejo hasta el momento:</h4>
        <br>
-       <li>Html</li>
-       <li>Css</li>
-       <li>Javascript</li>
-    </section>
+    <div class="galeria">
+      <div class="foto">
+        <img src="html-5.png" alt="Html5">
+      </div>
+      <div class="pie">
+        <p>Html</p>
+      </div>
+    </div>
+    <div class="galeria">
+      <div class="foto">
+        <img src="css-3.png" alt="Css3">
+      </div>
+      <div class="pie">
+        <p>Css</p>
+      </div>
+    </div>
+    <div class="galeria">
+      <div class="foto">
+        <img src="secuencia-de-comandos-de-java.png" alt="Javascript">
+      </div>
+      <div class="pie">
+        <p>Javascript</p>
+      </div>
+    </div>
+    <div class="galeria">
+      <div class="foto">
+        <img src="logotipo-de-python-language.png" alt="Python">
+      </div>
+      <div class="pie">
+        <p>Python</p>
+      </div>
+    </div>
+  </section>
     <section class="botones" id="Contacto">
         <a href="https://github.com/NicoZdev" target="_blank" class="fa fa-github"></a>
         <a href="https://www.instagram.com/nicozarantonello/" target="_blank" class="fa fa-instagram"></a>
@@ -58,6 +121,8 @@
         <a href="https://www.youtube.com/channel/UCK1LZfeb-r9EfwdOmerPL5g" target="_blank" class="fa fa-youtube"></a>
         <a href="https://www.linkedin.com/in/nicolás-zarantonello-348579264/" target="_blank" class="fa fa-linkedin"></a>
       </section>
+      <br>
+      <p class="copyright">Copyright © Todos los derechos reservados Nicolás Zarantonello</p>
 </body>
 <script src="script.js"></script>
 </html>
