--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width-device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PortFolio</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -15,12 +16,13 @@
 <link href="https://fonts.googleapis.com/css2?family=Righteous&display=swap" rel="stylesheet">
 </head>
 <body>
+  <div class="todo">
   <div id="contcarga">
     <div id="carga"></div>
   </div>
     <section>
       <nav class="navegar">
-        <img src="Logo ZN.jpg" alt="Logo" width="3%">
+        <img src="Logo ZN.jpg" alt="Logo" width="3.2%">
         <a href="#Inicio">Incio</a>
         <a href="#SobreMi">Sobre mi</a>
         <a href="#Proyectos">Proyectos</a>
@@ -81,38 +83,40 @@
   <section id="Tecnologias" class="tecnologias">
        <h4>Tecnologias que manejo hasta el momento:</h4>
        <br>
+  <div class="contecno">
     <div class="galeria">
-      <div class="foto">
+     <figure class="foto">
         <img src="html-5.png" alt="Html5">
-      </div>
       <div class="pie">
         <p>Html</p>
       </div>
+     </figure>
     </div>
     <div class="galeria">
-      <div class="foto">
+      <figure class="foto">
         <img src="css-3.png" alt="Css3">
-      </div>
       <div class="pie">
         <p>Css</p>
       </div>
+     </figure>
     </div>
     <div class="galeria">
-      <div class="foto">
+      <figure class="foto">
         <img src="secuencia-de-comandos-de-java.png" alt="Javascript">
-      </div>
       <div class="pie">
         <p>Javascript</p>
       </div>
+     </figure>
     </div>
     <div class="galeria">
-      <div class="foto">
+      <figure class="foto">
         <img src="logotipo-de-python-language.png" alt="Python">
-      </div>
       <div class="pie">
         <p>Python</p>
       </div>
+     </figure>
     </div>
+  </div>
   </section>
     <section class="botones" id="Contacto">
         <a href="https://github.com/NicoZdev" target="_blank" class="fa fa-github"></a>
@@ -123,6 +127,7 @@
       </section>
       <br>
       <p class="copyright">Copyright © Todos los derechos reservados Nicolás Zarantonello</p>
+    </div>
 </body>
 <script src="script.js"></script>
 </html>
