--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width-device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" >
     <title>PortFolio</title>
     <link rel="icon" href="Logo ZN.jpg">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -106,7 +106,7 @@
     </div>
     <div class="galeria">
       <figure class="foto" id="java">
-        <img src="JavaW.png" alt="Javascript">
+        <img src="javaW.png" alt="Javascript">
       <div class="pie">
         <p>Javascript</p>
       </div>
@@ -120,6 +120,14 @@
       </div>
      </figure>
     </div>
+    <div class="galeria">
+      <figure class="foto" id="angular">
+         <img src="AngularW.png" alt="Angular">
+       <div class="pie">
+         <p>Angular</p>
+       </div>
+      </figure>
+     </div>
   </div>
   </section>
     <section class="botones" id="Contacto">
