--- a/index.html
+++ b/index.html
@@ -29,7 +29,6 @@
         <a href="#Proyectos">Proyectos</a>
         <a href="#Tecnologias">Tecnologias</a>
         <a href="#Contacto">Contacto</a>
-        <a href="login.html">Ingresar</a>
         <label for="toggle" id="darkmode"><img src="sol.png" width="175%"></label>
         <input type="checkbox" id="toggle">
       </section>
@@ -43,7 +42,7 @@
        <p id="texto-editable">
         Hola, mi nombre es Nicolás Zarantonello, me encanta la programación y aprender sobre la misma.
         Me gusta explorar nuevos proyectos y descubrir cosas nuevas.
-        Soy responsable y perseverante, siempre dispuesto al trabajo en equipo para lograr los objetivo.
+        Soy responsable y perseverante, siempre dispuesto al trabajo en equipo para lograr los objetivo.<br> Algunos de mis hobbies son la Mecanografía, los diferentes tipos de lenguajes de programación y la edicion de video.
         </p>
         <br>
         <a href="CV_nicoz.pdf" download="Cv NicoZ" target="_blank"><button class="cv">Descargar CV</button></a>
